# chatguys

./: .env.example  .gitignore  LICENSE  README.md  plan  pyproject.toml  requirements.txt
chatguys/: __init__.py  __main__.py  agent_manager.py  chat_app.py  command_processor.py  context_manager.py
chatguys/cli/: app.py  commands.py  input.py
chatguys/core/: agent.py  config.py  context.py
chatguys/models/: message.py
chatguys/utils/: completion.py  text.py
config/: default_roles.yaml
